--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     <div id="resultContainer" style="margin-top:20px; display:none;"></div>
 
     <!-- ── Disclaimer ── -->
-    <div class="card" style="border-left: 4px solid var(--amber-700); background: var(--amber-100);">
+    <div class="card" style="border-left: 4px solid var(--amber-700); background: var(--amber-100); margin-top: 20px;">
         <p style="font-size: 0.82rem; color: var(--amber-700); line-height: 1.6;">
             <strong>Disclaimer:</strong> This calculator is intended for reference purposes only. Results may not reflect official school determinations. Always verify Honor Roll eligibility with your school's records office.
         </p>
