--- a/index.html
+++ b/index.html
@@ -413,6 +413,21 @@
             color: white;
         }
 
+        /* ── Print button ── */
+        .print-btn {
+            display: flex; align-items: center; justify-content: center; gap: 7px;
+            width: 100%; padding: 11px;
+            background: none;
+            border: 2px solid var(--slate-300);
+            border-radius: 10px;
+            color: var(--slate-500);
+            font-size: 0.9rem; font-weight: 600;
+            cursor: pointer;
+            margin-top: 12px;
+            transition: all 0.2s;
+        }
+        .print-btn:hover { border-color: var(--blue-500); color: var(--blue-700); background: var(--blue-100); }
+
         /* ── Responsive ── */
         @media (max-width: 620px) {
             .table-header { display: none; }
@@ -616,6 +631,8 @@ alert(
 
 <script>
     let nextId = 1;
+    let lastCourses = [];
+    let lastResult  = null;
 
     /* ─── Conversion & validation ─── */
 
@@ -708,7 +725,9 @@ alert(
             return;
         }
 
-        renderResult(computeResult(courses), courses);
+        lastCourses = courses;
+        lastResult  = computeResult(courses);
+        renderResult(lastResult, courses);
     }
 
     function computeResult(courses) {
@@ -826,6 +845,13 @@ alert(
                     </div>
                 </div>
             </div>
+            <button class="print-btn" onclick="printReport()">
+                <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="6 9 6 2 18 2 18 9"/><path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/>
+                    <rect x="6" y="14" width="12" height="8"/>
+                </svg>
+                Print Report
+            </button>
         `;
 
         container.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
@@ -836,6 +862,128 @@ alert(
                     <span class="criterion-icon">${pass ? '&#10003;' : '&#10007;'}</span>
                     <span>${label}</span>
                 </div>`;
+    }
+
+    /* ─── Print Report ─── */
+
+    function printReport() {
+        if (!lastResult || lastCourses.length === 0) return;
+
+        const r       = lastResult;
+        const courses = lastCourses;
+        const { checks, academicAvg, conductAvg, below3Count, courseCount } = r;
+
+        const levelMeta = {
+            principal: { title: 'Principal Honor Roll', color: '#d97706' },
+            superior:  { title: 'Superior Honor Roll',  color: '#475569' },
+            honor:     { title: 'Honor Roll',            color: '#c2410c' },
+            none:      { title: 'No Honor Roll',         color: '#64748b' },
+        }[r.level];
+
+        const effortLabel  = { 1: '1 — Excellent', 2: '2 — Good', 3: '3 — Satisfactory' };
+        const conductLabel = { 4: '4 — A', 3: '3 — B', 2: '2 — C' };
+
+        const today = new Date().toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' });
+
+        function pc(pass, label) {
+            const icon  = pass ? '✓' : '✗';
+            const color = pass ? '#15803d' : '#dc2626';
+            const bg    = pass ? '#dcfce7' : '#fee2e2';
+            return `<div style="display:flex;gap:7px;padding:5px 10px;border-radius:5px;background:${bg};margin-bottom:4px;font-size:0.8rem;color:${color};">
+                        <span style="font-weight:900;flex-shrink:0;">${icon}</span><span>${label}</span>
+                    </div>`;
+        }
+
+        const courseRows = courses.map(c => `
+            <tr>
+                <td>${c.label}</td>
+                <td style="text-align:center;">${c.academic.toFixed(2)}</td>
+                <td style="text-align:center;">${effortLabel[c.effort] || c.effort}</td>
+                <td style="text-align:center;">${conductLabel[c.conduct] || c.conduct}</td>
+            </tr>`).join('');
+
+        const html = `<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Honor Roll Report</title>
+<style>
+  *{box-sizing:border-box;margin:0;padding:0;}
+  body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;color:#0f172a;padding:36px 48px;font-size:14px;}
+  .hdr{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #e2e8f0;padding-bottom:14px;margin-bottom:22px;}
+  h1{font-size:1.35rem;font-weight:800;}
+  .sub{font-size:0.82rem;color:#64748b;margin-top:2px;}
+  .date{font-size:0.82rem;color:#64748b;}
+  .banner{border-left:5px solid ${levelMeta.color};padding:14px 18px;background:#f8fafc;border-radius:8px;margin-bottom:22px;}
+  .level{font-size:1.25rem;font-weight:800;color:${levelMeta.color};margin-bottom:8px;}
+  .stats{display:flex;gap:32px;margin-top:4px;}
+  .sl{font-size:0.68rem;text-transform:uppercase;letter-spacing:0.5px;color:#64748b;}
+  .sv{font-size:1.05rem;font-weight:700;}
+  .sec{font-size:0.7rem;font-weight:700;text-transform:uppercase;letter-spacing:0.6px;color:#64748b;margin-bottom:10px;}
+  table{width:100%;border-collapse:collapse;margin-bottom:24px;font-size:0.85rem;}
+  th{background:#f1f5f9;text-align:left;padding:8px 12px;font-size:0.7rem;text-transform:uppercase;letter-spacing:0.5px;color:#64748b;font-weight:700;border-bottom:1px solid #cbd5e1;}
+  td{padding:8px 12px;border-bottom:1px solid #f1f5f9;}
+  tr:last-child td{border-bottom:none;}
+  .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-bottom:24px;}
+  .col h3{font-size:0.82rem;font-weight:700;margin-bottom:8px;padding-bottom:5px;border-bottom:2px solid #e2e8f0;}
+  .disc{font-size:0.75rem;color:#92400e;background:#fef3c7;border-left:3px solid #d97706;padding:8px 12px;border-radius:5px;}
+  @media print{body{padding:20px 28px;}}
+</style>
+</head>
+<body>
+<div class="hdr">
+  <div><h1>Honor Roll Calculator</h1><div class="sub">Eligibility Report</div></div>
+  <div class="date">${today}</div>
+</div>
+
+<div class="banner">
+  <div class="level">${levelMeta.title}</div>
+  <div class="stats">
+    <div><div class="sl">Academic Avg</div><div class="sv">${academicAvg.toFixed(2)}</div></div>
+    <div><div class="sl">Conduct Avg</div><div class="sv">${conductAvg.toFixed(2)}</div></div>
+    <div><div class="sl">Courses</div><div class="sv">${courseCount}</div></div>
+  </div>
+</div>
+
+<div class="sec">Course Grades</div>
+<table>
+  <thead><tr><th>Course</th><th style="text-align:center;">Academic</th><th style="text-align:center;">Effort</th><th style="text-align:center;">Conduct</th></tr></thead>
+  <tbody>${courseRows}</tbody>
+</table>
+
+<div class="sec">Criteria Breakdown</div>
+<div class="grid">
+  <div class="col">
+    <h3>Principal Honor Roll</h3>
+    ${pc(checks.principal.allAcad35,   'All academic grades \u2265 3.5')}
+    ${pc(checks.principal.allEffort1,  'All effort grades = 1 (Excellent)')}
+    ${pc(checks.principal.allConduct4, 'All conduct grades = 4 (A)')}
+  </div>
+  <div class="col">
+    <h3>Superior Honor Roll</h3>
+    ${pc(checks.superior.avgGte37,     'Academic average \u2265 3.7 (' + academicAvg.toFixed(2) + ')')}
+    ${pc(checks.superior.noBelow349,   'No academic grade < 3.0')}
+    ${pc(checks.superior.effortLte2,   'All effort grades \u2264 2')}
+    ${pc(checks.superior.conductGte37, 'Conduct average \u2265 3.7 (' + conductAvg.toFixed(2) + ')')}
+    ${pc(checks.superior.noConduct2,   'No conduct grade \u2264 2')}
+  </div>
+  <div class="col">
+    <h3>Honor Roll</h3>
+    ${pc(checks.honor.avgGte35,     'Academic average \u2265 3.5 (' + academicAvg.toFixed(2) + ')')}
+    ${pc(checks.honor.max1Below3,   'At most 1 academic < 3.0 (you have: ' + below3Count + ')')}
+    ${pc(checks.honor.effortLte2,   'All effort grades \u2264 2')}
+    ${pc(checks.honor.conductGte30, 'Conduct average \u2265 3.0 (' + conductAvg.toFixed(2) + ')')}
+    ${pc(checks.honor.noConduct2,   'No conduct grade \u2264 2')}
+  </div>
+</div>
+
+<div class="disc"><strong>Disclaimer:</strong> This report is for reference purposes only. Always verify Honor Roll eligibility with your school's records office.</div>
+<script>window.onload=function(){window.print();};<\/script>
+</body></html>`;
+
+        const win = window.open('', '_blank', 'width=920,height=720');
+        win.document.write(html);
+        win.document.close();
     }
 
     /* ─── Bulk import ─── */
