adding a default value for dropdowns

--- a/index.html
+++ b/index.html
@@ -836,14 +836,12 @@ alert(
                    min="2" max="100" step="0.01" aria-label="Academic grade"
                    oninput="liveValidate(this)" />
             <select class="col-effort" aria-label="Effort grade">
-                <option value="">— Effort —</option>
-                <option value="1">1 — Excellent</option>
+                <option value="1" selected>1 — Excellent</option>
                 <option value="2">2 — Good</option>
                 <option value="3">3 — Satisfactory</option>
             </select>
             <select class="col-conduct" aria-label="Conduct grade">
-                <option value="">— Conduct —</option>
-                <option value="4">4 — A</option>
+                <option value="4" selected>4 — A</option>
                 <option value="3">3 — B</option>
                 <option value="2">2 — C</option>
             </select>
